@@ -219,6 +219,7 @@ def coerce_session_params(params):
         ('secret', (str, types.NoneType), "Session secret must be a string."),
         ('validate_key', (str, types.NoneType), "Session encrypt_key must be a string."),
         ('encrypt_key', (str, types.NoneType), "Session validate_key must be a string."),
+        ('secure', (bool, types.NoneType), "Session secure must be a boolean."),
         ('timeout', (int, types.NoneType), "Session timeout must be an integer."),
     ]
     return verify_rules(params, rules)
